--- a/package.json
+++ b/package.json
@@ -1,45 +1,46 @@
 {
   "name": "puzzle_demo",
   "version": "0.2.1",
-  "description": "A pluggable micro-frontend structure based on Vue and Webpack4. 基于 Vue 和 Webpack4 的可热插拔式微前端架构",
+  "description": "A pluggable micro-frontend structure based on Vue and Webpack5. 基于 Vue 和 Webpack5 的可热插拔式微前端架构",
   "author": "GengFei <im.gf@live.com>",
   "scripts": {
     "start": "webpack-dev-server --config config/webpack.dev.js",
     "build": "node config/webpack.prod.js",
     "dll": "webpack --config config/webpack.build.dll.js --mode production",
-    "core": "webpack --hide-modules --config config/webpack.build.core.js",
-    "frame": "webpack --hide-modules --config config/webpack.build.frame.js",
-    "puzzle": "webpack --hide-modules --config config/webpack.build.puzzle.js"
+    "core": "webpack --config config/webpack.build.core.js",
+    "frame": "webpack --config config/webpack.build.frame.js",
+    "puzzle": "webpack --config config/webpack.build.puzzle.js"
   },
   "dependencies": {
-    "@babel/runtime": "^7.4.5",
-    "axios": "^0.19.0",
-    "loadjs": "^3.6.1",
-    "minireset.css": "0.0.5",
-    "moment": "^2.24.0",
-    "vue": "^2.6.10",
-    "vue-router": "^3.0.6",
-    "vuex": "^3.1.1"
+    "@babel/runtime": "^7.20.1",
+    "axios": "^1.2.0",
+    "loadjs": "^4.2.0",
+    "minireset.css": "^0.0.7",
+    "moment": "^2.29.4",
+    "vue": "^2.7.10",
+    "vue-router": "^3.6.5",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.4",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
-    "babel-loader": "^8.0.6",
-    "clean-webpack-plugin": "^2.0.2",
-    "copy-webpack-plugin": "^5.0.3",
-    "css-loader": "^2.1.1",
-    "file-loader": "^3.0.1",
-    "html-webpack-plugin": "^3.2.0",
-    "inquirer": "^6.3.1",
-    "less": "^3.9.0",
-    "less-loader": "^5.0.0",
-    "vue-loader": "^15.7.0",
-    "vue-template-compiler": "^2.6.10",
-    "webpack": "^4.32.0",
-    "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.4.1",
-    "webpack-merge": "^4.2.1"
+    "@babel/core": "^7.20.2",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.19.6",
+    "@babel/preset-env": "^7.20.2",
+    "babel-loader": "^9.1.0",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.7.2",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.0",
+    "inquirer": "^8.0.0",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
+    "vue-loader": "^15.10.0",
+    "vue-style-loader": "^4.1.3",
+    "vue-template-compiler": "^2.7.14",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.0",
+    "webpack-dev-server": "^4.11.1",
+    "webpack-merge": "^5.8.0"
   }
 }
